[gd_scene load_steps=4 format=3 uid="uid://dcekye8yumxe1"]

[ext_resource type="Script" path="res://scripts/bhv_prep_area.gd" id="1_ax5p8"]
[ext_resource type="Texture2D" uid="uid://g2bjvhna83op" path="res://sprites/prep/spr_prep_area.png" id="1_gwadr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qcnw6"]
size = Vector2(130, 58)

[node name="ObjPrepArea" type="Node2D"]
script = ExtResource("1_ax5p8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gwadr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qcnw6")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
